# 0xVault

./: CMakeLists.txt
src/: main.cpp
ui/: app-window.slint  exmp.slint
ui/about/: about-tab.slint
ui/add-edit/: add-edit-tab.slint
ui/setting/: settings-tab.slint
ui/vault/: vault-tab.slint
